--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,11 @@
 @import "tailwindcss";
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #080000;
 }
 
 @theme inline {
@@ -19,8 +22,3 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
